# Semantic-Search-and-Question-Answering

./: README.md  output.html  pyproject.toml
src/similarity/: 08_Preprocessing.ipynb  Untitled-1.ipynb  WordSimHighlighter.ipynb  WordSimHighlighter.py  main.py  output.html  semantic_search_and_QA.ipynb  similar.py  tokenizeer.py  tokenizer.py
